--- a/flexdashboard.Rmd
+++ b/flexdashboard.Rmd
@@ -25,10 +25,10 @@ ny_noaa_data_tidy_5000 =
   mutate(month = as.integer(month), year = as.integer(year), day = as.integer(day), tmin = as.integer(tmin), tmax = as.integer(tmax)) %>% 
   mutate(month = month.name[month], tmin = tmin / 10, tmax = tmax / 10, prcp = prcp / 10) %>% 
   filter(!is.na(tmax), !is.na(tmin), !is.na(prcp), !is.na(snow)) %>% 
-  sample_n(5000)
+  sample_n(10000)
 ```
 
-Since the data set is quite huge with 1,417,635 entries, we remove all the NAs from precipitation, minimum temperature and maximum temperature and then take random 5000 samples from it by setting seed as 1.
+taking a sample of 10,000 to decrease the size of dataset
 
 Column {data-width=650}
 -----------------------------------------------------------------------
